--- a/style.css
+++ b/style.css
@@ -25,3 +25,11 @@
 #dropdownMenuButton {
   margin-right: 32px;
 }
+
+/* ************************************* */
+/*                FOOTER                 */
+/* ************************************* */
+
+.space-line {
+  height: 2px;
+}
