--- a/style.css
+++ b/style.css
@@ -51,3 +51,37 @@
 .transparent h1 {
   font-size: 5em;
 }
+
+/* ************************************* */
+/*                 CARDS                 */
+/* ************************************* */
+.flexbox-section {
+  display: flex;
+  justify-content: space-around;
+}
+.card-img-top {
+  max-height: 50em;
+}
+.profile-card {
+  border: solid 1.2px lightgrey; 
+  max-width: 400px;
+  display: flex;
+  justify-content: start;
+}
+.profile-card img {
+  max-height: 180px;
+  max-width: 150px;
+}
+.margin-left {
+  margin-left: 30px;
+}
+.card-border {
+  border: solid 1.2px lightgrey;
+  padding: 20px 20px;
+  border-radius: 10px;
+}
+.users_list_card_image {
+  width: 32px;
+  height: 32px;
+  background-image: url("data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%2232%22%20height%3D%2232%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2032%2032%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_1707deaeb86%20text%20%7B%20fill%3A%23007bff%3Bfont-weight%3Abold%3Bfont-family%3AArial%2C%20Helvetica%2C%20Open%20Sans%2C%20sans-serif%2C%20monospace%3Bfont-size%3A2pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_1707deaeb86%22%3E%3Crect%20width%3D%2232%22%20height%3D%2232%22%20fill%3D%22%23007bff%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%2212.291666746139526%22%20y%3D%2216.999999976158144%22%3E32x32%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E");
+}
